manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "iibclus-ae22"
    labels:
        app: "iibclus-ae22"
spec:
    type: LoadBalancer
    ports:
    - port: 4414
      targetPort: 4414
      protocol: TCP
      name: http
    selector:
        app: "iibclus-ae22"
