manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "iibapps-06af"
    labels:
        app: "iibapps-06af"
spec:
    type: LoadBalancer
    ports:
    - port: 4414
      targetPort: 4414
      protocol: TCP
      name: http
    selector:
        app: "iibapps-06af"
