manifests/service-3.yml
apiVersion: v1
kind: Service
metadata:
    name: "iibapps-fb3c"
    labels:
        app: "iibapps-fb3c"
spec:
    type: LoadBalancer
    ports:
    - port: 4414
      targetPort: 4414
      protocol: TCP
      name: http
    selector:
        app: "iibapps-fb3c"
